--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HyperfocusMobileGiftEngine",
+  "name": "hyperfocus-mobile-gift-engine",
   "version": "1.0.0",
   "description": "The most advanced neurodivergent-friendly TikTok Live gift effect mobile app!",
   "main": "index.js",
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.0",
-    "react-native-wgpu": "^0.7.0",
+    "react-native-wgpu": "^0.2.8",
     "react-native-websocket": "^1.0.0",
     "react-native-haptic-feedback": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
@@ -31,7 +31,14 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.77.0"
   },
-  "keywords": ["TikTok", "Live", "WebGPU", "Streaming", "Neurodivergent", "Interactive"],
+  "keywords": [
+    "TikTok",
+    "Live",
+    "WebGPU",
+    "Streaming",
+    "Neurodivergent",
+    "Interactive"
+  ],
   "author": "Hyperfocus Zone Team",
   "license": "MIT"
 }
