--- a/package.json
+++ b/package.json
@@ -1,21 +1,58 @@
 {
-  "name": "gift-engine-webapp",
+  "name": "hyperfocus-gift-engine",
   "private": true,
   "version": "1.0.0",
-  "description": "React 18 TikTok Live Interactive Streaming System",
+  "description": "React 19 TikTok Live Interactive Streaming System with PWA support",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext js,jsx,ts,tsx",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css}",
+    "test": "vitest",
+    "analyze": "vite build --mode analyze"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.0.0-beta",
+    "react-dom": "^19.0.0-beta",
+    "framer-motion": "^11.0.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.1.0",
-    "vite": "^5.0.0"
-  }
+    "@vite-pwa-org/vite-plugin-pwa": "^0.17.0",
+    "vite": "^5.0.0",
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.0",
+    "vitest": "^1.0.0",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "keywords": [
+    "tiktok",
+    "live-streaming",
+    "gamification",
+    "react",
+    "pwa",
+    "accessibility",
+    "neurodivergent"
+  ]
 }
