--- a/package.json
+++ b/package.json
@@ -10,29 +10,50 @@
     "preview": "vite preview",
     "lint": "eslint src --ext js,jsx,ts,tsx",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css}",
-    "test": "vitest",
+    "test": "jest --config=jest.config.cjs",
+    "test:watch": "jest --watch --config=jest.config.cjs",
+    "test:coverage": "jest --coverage --config=jest.config.cjs",
+    "test:update": "jest --updateSnapshot --config=jest.config.cjs",
     "analyze": "vite build --mode analyze"
   },
   "dependencies": {
-    "react": "^19.0.0-beta",
-    "react-dom": "^19.0.0-beta",
+    "@react-three/drei": "^9.94.0",
+    "@react-three/fiber": "^8.15.16",
     "framer-motion": "^11.0.0",
-    "react-router-dom": "^6.20.0"
+    "react": "^19.0.0-rc.0",
+    "react-dom": "^19.0.0-rc.0",
+    "react-router-dom": "^6.20.0",
+    "three": "^0.160.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^4.1.0",
-    "@vite-pwa-org/vite-plugin-pwa": "^0.17.0",
-    "vite": "^5.0.0",
-    "eslint": "^8.50.0",
-    "prettier": "^3.0.0",
-    "vitest": "^1.0.0",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
-    "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.0"
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.50.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.4.0",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.0",
+    "vite": "^5.0.0",
+    "vite-plugin-pwa": "^0.19.0",
+    "vitest": "^4.0.4"
   },
   "browserslist": {
     "production": [
